--- a/AngularDemo/Index.html
+++ b/AngularDemo/Index.html
@@ -3,7 +3,7 @@
     <title>Angular 2 Web Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
